<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023 AtigaOS Projec5

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Eunoia -->
    <string name="eunoia_summary">EunoiaOS customization features</string>
    <string name="eunoia_title">Eunoia</string>

    <!-- 4G icon -->
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>

    <!-- Battery Bar -->
    <string name="battery_bar_color">Color</string>
    <string name="battery_bar_charging_color">Charging color</string>
    <string name="battery_bar_battery_low_color">Low battery color</string>
    <string name="battery_bar_style_title">Alignment</string>
    <string name="battery_bar_thickness_title">Thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_style_regular">Regular</string>
    <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
    <string name="battery_bar_style_reversed">Reversed</string>
    <string name="battery_bar_use_charging_color">Custom charging color</string>
    <string name="battery_bar_blend_color_title">Blend colors</string>
    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
    <string name="battery_bar_blend_color_reverse_summary_off">Full &#8594; empty: red &#8592; green &#8592; blue &#8592; red</string>
    <string name="battery_bar_blend_color_reverse_summary_on">Full &#8594; empty: red &#8594; green &#8594; blue &#8594; red</string>

    <!-- Button -->
    <string name="button_settings_title">Button</string>
    <string name="button_settings_summary">Customize button actions and behavior</string>

    <!-- Buttons - Enable navbar -->
    <string name="disable_navkeys_title">Enable on-screen nav bar</string>
    <string name="disable_navkeys_summary">Enable on-screen navigation bar and disable hardware buttons</string>

    <!-- Buttons - Swap capacitive keys -->
    <string name="swap_capacitive_keys_title">Swap capacitive buttons</string>
    <string name="swap_capacitive_keys_summary">Swap the order of recents and back buttons</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right" translatable="false">→</string>
    <string name="arrow_down" translatable="false">↓</string>
    <string name="hex" translatable="false">Hex:</string>
    <string name="hex_hint" translatable="false">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>

    <!-- CustomSeekBar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Generic stuff used everywhere -->
    <string name="advanced">Advanced</string>

    <!-- Gestures -->
    <string name="gestures_settings_title">Gestures</string>
    <string name="gestures_settings_summary">Configure system gestures and shortcuts</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>

    <!-- Hardware -->
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_launch_camera">Launch camera</string>
    <string name="hardware_keys_action_sleep">Turn screen off</string>
    <string name="hardware_keys_action_last_app">Last app</string>
    <string name="hardware_keys_action_split_screen">Split screen</string>
    <string name="hardware_keys_action_kill_app">Kill foreground app</string>

    <!-- Maintainer -->
    <string name="maintainer_title">Maintainer</string>
    <string name="maintainer_name">Unknown</string>

    <!-- Navigation Bar -->
    <string name="navigation_bar_category">Navigation bar</string>
    <string name="navigation_bar_enable_taskbar_title">Enable taskbar</string>
    <string name="navigation_bar_invert_layout_title">Invert layout</string>
    <string name="navigation_bar_invert_layout_summary">Inverts the layout of the navigation bar and other items, such as the IME switcher</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="navigation_bar_arrow_keys_title">Show arrow keys while typing</string>
    <string name="navigation_bar_arrow_keys_summary">Display left and right cursor buttons while typing. Overrides IME switcher.</string>
    <string name="navigation_bar_back_long_press_title">Back long press action</string>
    <string name="navigation_bar_home_long_press_title">Home long press action</string>
    <string name="navigation_bar_home_double_tap_title">Home double tap action</string>
    <string name="navigation_bar_app_switch_long_press_title">Recents long press action</string>
    <string name="navigation_bar_edge_long_swipe_title">Edge long swipe action</string>

    <!-- Power menu -->
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_items_title">Power menu items</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_screenshot_summary">Long-press for partial screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_bug_report_devoptions_unavailable">Bug reporting is disabled as development settings aren\'t enabled</string>
    <string name="power_menu_bug_report_unavailable_for_user">Bug reporting is disabled for non-primary users.</string>
    <string name="power_menu_emergency_title">Emergency</string>
    <string name="power_menu_devicecontrols_title">Device controls</string>
    <string name="power_menu_advanced_restart_title">Advanced restart</string>
    <string name="power_menu_advanced_restart_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
    <string name="power_menu_emergency_affordance_enabled">Emergency affordance is enabled</string>

    <!-- Running services - Background processes tab -->
    <string name="background_processes_settings_title">Background processes</string>

    <!-- Statusbar -->
    <string name="statusbar_settings_title">Statusbar</string>
    <string name="statusbar_settings_summary">Customize status bar appearance and behavior</string>
    <string name="statusbar_battery_bar_title">Battery bar</string>
    <string name="statusbar_battery_bar_summary">Display and customize battery bar above status bar</string>
    <string name="status_bar_logo_title">Statusbar Logo</string>
    <string name="status_bar_logo_summary">Display a EunoiaOS logo on left of the status bar</string>

    <!-- Status bar - Battery -->
    <string name="status_bar_battery_title">Battery indicator</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_eunoia_circle">Eunoia Circle</string>
    <string name="status_bar_battery_style_text">Text</string>

    <!-- Status bar - Battery percentage -->
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>

    <!-- Teams -->
    <string name="eunoia_team_title">EunoiaOS Teams</string>
    <string name="eunoia_title_summary">The team behind EunoiaOS, responsible for the website, system development, and device maintainers.</string>
    <string name="eunoia_website_title">Official Website</string>
    <string name="eunoia_website_url">eunoiaos.com</string>
    <string name="eunoia_telegram_title">Telegram</string>
    <string name="eunoia_telegram_url">t.me/EunoiaOS</string>
    <string name="eunoia_support_title">Support</string>
    <string name="eunoia_support_url">tako.id/EunoiaOS</string>

    <!-- Teams - Core -->
    <string name="eunoia_core_title">Core</string>
    <string name="eunoia_core_founder_title">Founder</string>
    <string name="eunoia_core_founder_person">Saiful Amri</string>
    <string name="eunoia_core_designer_title">Lead Designer</string>
    <string name="eunoia_core_designer_person">Bisma WY</string>
    <string name="eunoia_core_development_title">Lead Development</string>
    <string name="eunoia_core_development_person">Aditya Eka Pranata</string>

    <!-- Units -->
    <string name="unit_seconds">seconds</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels" translatable="false">dp</string>
    <string name="unit_hz" translatable="false">hz</string>

    <!-- Version -->
    <string name="eunoia_version_summary">All about EunoiaOS information</string>
    <string name="eunoia_version_title">Eunoia Version</string>
</resources>
