<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2023 The AtigaOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    android:title="@string/statusbar_settings_title"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <lineageos.preference.LineageSystemSettingSwitchPreference
        android:icon="@drawable/ic_statusbar_logo"
        android:key="status_bar_logo"
        android:title="@string/status_bar_logo_title"
        android:summary="@string/status_bar_logo_summary" />

    <!-- Battery bar -->
    <Preference
        android:key="battery_bar"
        android:icon="@drawable/ic_statusbar_batterybar"
        android:title="@string/statusbar_battery_bar_title"
        android:summary="@string/statusbar_battery_bar_summary"
        android:fragment="com.eunoiaos.settings.statusbar.BatteryBar" />

</PreferenceScreen>
